--- a/Models/SpeechLM/2024.08.27_Mini-Omni.md
+++ b/Models/SpeechLM/2024.08.27_Mini-Omni.md
@@ -1,7 +1,5 @@
 # Mini-Omni
 
-</details>
-
 <details>
 <summary>基本信息</summary>
 
@@ -15,7 +13,7 @@
   - [Github](https://github.com/gpt-omni/mini-omni)
   - [Demo]()
 - 文件:
-  - [ArXiv](_PDF/2408.16725v1__Mini-Omini__Language_Models_Can_Hear_Talk_While_Thinking_in_Streaming.pdf)
+  - [ArXiv](_PDF/2408.16725v2__Mini-Omini__Language_Models_Can_Hear_Talk_While_Thinking_in_Streaming.pdf)
   - [Publication] #TODO
 
 </details>
@@ -36,14 +34,14 @@ To our best knowledge, ***Mini-Omni*** is the first fully end-to-end, open-sourc
 ## 1.Introduction: 引言
 
 Recent developments in large language models have progressed rapidly, with models becoming increasingly powerful, such as off-the-shelf Llama 3.1 \citep{llama3.1}, Mixtral \citep{mixtral}, Qwen-2 \citep{qwen2}, and the well-known GPT-4.
-As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by LLaVA \citep{llava}, [Qwen2-Audio](../Speech_LLM/2024.07.15_Qwen2-Audio.md) and Video-llama \citep{videollama}.
+As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by LLaVA \citep{llava}, [Qwen2-Audio](../SpeechLM/2024.07.15_Qwen2-Audio.md) and Video-llama \citep{videollama}.
 Despite their strength in specific tasks, a significant gap remains that hinders further integration of large language models into daily application: real-time voice interaction capability.
 GPT-4o \citep{gpt4}, introduced by OpenAI, is the first model to feature real-time multimodal speech interaction capabilities.
 It can understand and engage with vision, audio, and text while enabling real-time speech conversations, although it remains closed-source.
 Other models typically adopt two approaches to incorporate speech capabilities.
 The first is a cascade method, where the language model generates text, followed by a text-to-speech (TTS) model for audio synthesis.
 This approach introduces significant latency due to the time required for text generation, severely impacting user experience.
-The second, an end-to-end method like [SpeechGPT](../Speech_LLM/2023.05.18_SpeechGPT.md), generates text before continuing to generate audio.
+The second, an end-to-end method like [SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md), generates text before continuing to generate audio.
 However, this still requires waiting for text generation.
 Large language models need real end-to-end speech output capabilities to provide real-time feedback.
 
@@ -97,8 +95,8 @@ This dataset, synthesized using GPT-4o, can be used to fine-tune models to devel
 
 Recently, researchers have been increasingly focused on advancing unified models for cross-modal understanding.
 These approaches typically employ a well-pretrained neural network as the encoder for relevant modalities, using a lightweight adapter to align the encoder's output with the text input of language model.
-Classical works such as LLaVA \citep{llava}, Flamingo \citep{flamingo} and BLIP \citep{blip} are used for visual understanding, while in the audio domain, models like [Whisper](../Speech_LLM/2022.12.06_Whisper.md) and Beats \citep{beats} are commonly utilized as encoders for semantic and acoustic features.
-In Llama 3.1, Whisper is employed, while SpeechVerse \citep{speechverse} leverages [WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [SALMONN](../Speech_LLM/2023.10.20_SALMONN.md), combine Whisper and Beats to extract features.
+Classical works such as LLaVA \citep{llava}, Flamingo \citep{flamingo} and BLIP \citep{blip} are used for visual understanding, while in the audio domain, models like [Whisper](../SpeechLM/2022.12.06_Whisper.md) and Beats \citep{beats} are commonly utilized as encoders for semantic and acoustic features.
+In Llama 3.1, Whisper is employed, while SpeechVerse \citep{speechverse} leverages [WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [SALMONN](../SpeechLM/2023.10.20_SALMONN.md), combine Whisper and Beats to extract features.
 Such works are often constrained to producing output in the text modality.
 
 ### Audio Language Modeling
@@ -106,21 +104,21 @@ Such works are often constrained to producing output in the text modality.
 Recently, an increasing number of studies have employed audio tokenization to bridge the gap between audio and text.
 Audio tokenization converts continuous audio signals into discrete audio tokens, enabling large language models to perform inference and even cross-modal interactions.
 As a result, a variety of speech-text tasks, such as ASR, TTS, music understanding and generation, and sound editing, can be accomplished.
-[Mega-TTS](../Speech_LLM/2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SPEAR-TTS](../Speech_LLM/2023.02.07_SPEAR-TTS.md), and [Voicebox](../Speech_LLM/2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
+[Mega-TTS](../Speech_LLM/2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md), and [Voicebox](../Speech_LLM/2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
 
 ### Real-Time Human-Machine Interaction Models
 
 Since the introduction of GPT-4o \citep{gpt4}, real-time conversational models have achieved unprecedented results, providing near-instantaneous voice feedback to user inputs, marking a significant milestone for the next generation of multi-modal large models.
 However, the technical implementations remain proprietary.
 Models with real-time interaction capabilities are currently scarce.
-[SpeechGPT](../Speech_LLM/2023.05.18_SpeechGPT.md) is an early end-to-end speech interaction model; however, it still suffers from latency due to the Audio-Text-Text-Audio(A-T-T-A) process, similar to Spectron \citep{Spectron}.
-[LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md) also employs a similar approach but not for voice conversation scenario.
+[SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md) is an early end-to-end speech interaction model; however, it still suffers from latency due to the Audio-Text-Text-Audio(A-T-T-A) process, similar to Spectron \citep{Spectron}.
+[LauraGPT](../SpeechLM/2023.10.07_LauraGPT.md) also employs a similar approach but not for voice conversation scenario.
 [VITA](../../OpenSource/Official/2024.08.../Speech_LLM/2024.07.15_Qwen2-Audio.mdSpeech_LLM/2024.07.15_Qwen2-Audio.md) are two models that support voice input, but they output text and rely on external TTS systems for speech synthesis. ***Mini-Omni*** is a fully end-to-end speech-to-speech conversational model.
 Through our exploration, we have identified the biggest challenge in advancing this field: the logical inconsistency in reasoning when only the audio modality is present, which we will address in the following chapter.
 
 ## 3.Methodology: 方法
 
-Our innovation stems from existing methods such as [SpeechGPT](../Speech_LLM/2023.05.18_SpeechGPT.md) and Spectron \citep{Spectron} utilize the A-T-T-A approach, which mitigates the challenges of direct audio learning by guiding the speech generation process through text.
+Our innovation stems from existing methods such as [SpeechGPT](../SpeechLM/2023.05.18_SpeechGPT.md) and Spectron \citep{Spectron} utilize the A-T-T-A approach, which mitigates the challenges of direct audio learning by guiding the speech generation process through text.
 However, generating text first and then audio is suboptimal for real-time dialogue scenarios.
 To address this, we propose a novel method for simultaneous text and audio generation.
 This approach hypothesizes that text outputs have higher information density, allowing for the same response with fewer tokens.
@@ -186,7 +184,7 @@ This is achieved firstly due to the strong performance of our base model, and se
 #### Audio Encoding
 
 The audio input primarily focuses on feature extraction from the input audio, with options including Hubert or a separately pretrained audio encoder.
-Given our focus on speech input, [Whisper](../Speech_LLM/2022.12.06_Whisper.md) and [Qwen2-Audio](../Speech_LLM/2024.07.15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
+Given our focus on speech input, [Whisper](../SpeechLM/2022.12.06_Whisper.md) and [Qwen2-Audio](../SpeechLM/2024.07.15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
 For audio output, selecting audio tokens with a multi-codebook approach better captures audio details.
 We experimented with flattening for audio token modeling, but it resulted in excessively long tokens, which are detrimental to streaming and lead to unstable learning.
 Instead, parallel decoding, inspired by MusicGen \citep{MusicGEN}, employs a delay pattern combined with text conditions, as illustrated in Figure 2.
@@ -253,7 +251,7 @@ During fine-tuning, we use learn rate from 4e-6 to 5e-5.
 We first evaluated the model's performance on ASR tasks to assess its speech understanding capabilities.
 Basic experiments on speech recognition capabilities were conducted using the four test sets from [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md): test-clean, test-other, dev-clean, and dev-other.
 Results are presented in Table 2, where we compare the accuracy of our adopted speech recognition systems, [wav2vec2](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md) and Whisper-small, as well as the [VITA](../2024.08.09_VITA/Paper.md). ../../OpenSource/Official/2024.08.09_VITA/Paper.md
-The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind [Whisper](../Speech_LLM/2022.12.06_Whisper.md)-small’s decoder, it still achieves an excellent level of audio comprehension.
+The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind [Whisper](../SpeechLM/2022.12.06_Whisper.md)-small’s decoder, it still achieves an excellent level of audio comprehension.
 
 ### Case Study
 
